tests/base/invalid/Return_CompileFail_2.whiley
import whiley.lang.*:*

bool f(int x):
    return x
